# TopicsExplorer

./: .gitignore  .gitmodules  .mm  .project  CONTRIBUTING.md  FunktionenKatalog.md  FunktionenToDol290916.md  GoodTopics.ipynb  IntegrationTest_Mallet_Export.ipynb  IntegrationTest_txt_Mallet.ipynb  IntegrationTest_txt_gensim.html  IntegrationTest_txt_gensim.ipynb  IntegrationTest_v01.ipynb  InteractiveTutorial.ipynb  Introducing MALLET.ipynb  Introducing_MALLET.html  Introducing_MALLET.ipynb  Introducing_gensim.html  Introducing_gensim.ipynb  Introducing_lda.html  Introducing_lda.ipynb  Introduction.ipynb  IntroductionTopics.ipynb  Makefile  Mallet.ipynb  Pipfile  Python_2_pandas.ipynb  README.md  Testing Tokenizer.ipynb  TestingGensim.html  TestingGensim.ipynb  TestingGensim.md  TestingGensim1.ipynb  TestingGensim2.ipynb  TestingGensimCommented.html  TestingGensimCommented.ipynb  TestingGensimCommented.md  Testing_Mallet.ipynb  Topics.ipynb  Tutorial_Toolbox.ipynb  (+54 more)
Jinja2/: engine.py  index.html.jinja
application/: __init__.py  config.py  constants.py  database.py  gui.py  modeling.py  schema.sql  testing.py  utils.py  views.py  web.py  workflow.py
assets/: script.js  styles.css
bokeh_templates/: autoload_js.js  autoload_nb_js.js  autoload_tag.html  css_resources.html  doc_js.js  doc_nb_js.js  file.html  js_resources.html  notebook_load.html  plot_div.html  script_tag.html  try_run.js
corpus/: Howard_GodsoftheNorth.txt  Howard_SchadowsinZamboula.txt.csv  Howard_ShadowsintheMoonlight.txt.csv  Howard_TheDevilinIron.txt  Howard_TheDevilinIron.txt.csv  (+6 more)
lda/: lda2.py
(+589 files in other folders)
